[project]
name = "mov"
version = "0.2.3"
description = "Process top movie data"
authors = [
    {name = "NishNovae", email = "raecrowned@gmail.com"},
]
dependencies = [
    "requests>=2.32.3",
    "pandas>=2.2.2",
    "numpy>=2.0.1",
    "pyarrow>=17.0.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
mov-ping = "mov.cli:ping"

[tool.pdm]
distribution = true

[tool.pytest.ini_options]
pythonpath = [ "src/", "." ]

[project.urls]
Homepage = "https://github.com/NishNovae/movie"
Issues = "https://github.com/NishNovae/movie/issues"
